prepared for GMT